# Tic-tac-toe_tg

./: .env  .env.example  README.md  main.py  pyproject.toml  test_random_mode.py
.github/: copilot-instructions.md
app/: __init__.py  config.py
app/game/: logic.py
app/handlers/: game_handlers.py
app/keyboards/: game_keyboards.py
