[project]
name = "tic-tac-toe-tg"
version = "0.1.0"
description = "Telegram bot for playing Tic-Tac-Toe with modern Python stack"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.16.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
